--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
             <div class="navigation"><p align="right"><a href="index.html"><strong>Home</strong></a> | <a href="history.html">History</a> | <a href="tourism.html">Tourism</a></p></div>
             <div class="title"><h1>Welcome to Dubai</h1></div>
         </div>
+        <div class="pics">
+            <tr>
+                <th><div id="image1"><a href="index.html"><img class="page1" src="pics/image1.png" style="height:200px;"></a></div></th>
+                <th><div id="image3"><a href="history.html"><img class="page1" src="pics/image3.png" style="height:200px;"></a></div></th>
+                <th><div id="image2"><a href="tourism.html"><img class="page1" src="pics/image2.png" style="height:200px;"></a></div></th>
+            </tr>
+        </div>
         <footer>
             <div id="footer">&copy QuadriCo. 2019</div>
         </footer>
