--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="main.css"/>
-        <link rel="shortcut icon" href="pics/favicon.ico" />
+        <link rel="shortcut icon" href="pics/favicon.png" />
     </head>
     <body>
         <div class="header" id='home_header' style="text-align: center;">
