--- a/history.html
+++ b/history.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="main.css"/>
-        <link rel="shortcut icon" href="pics/favicon.png" />
+        <link rel="shortcut icon" href="images/image0.png" />
     </head>
     <body id="history">
         <div class='header' id="history_header" style="text-align: center;">
