--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="main.css"/>
-        <link rel="shortcut icon" href="pics/favicon.png" />
+        <link rel="shortcut icon" href="images/image0.png" />
     </head>
     <body>
         <div class="header" id='home_header' style="text-align: center;">
@@ -15,9 +15,9 @@
         </div>
         <div class="pics">
             <tr>
-                <th><div id="image1"><a href="index.html"><img class="page1" src="pics/image1.png" style="height:200px;"></a></div></th>
-                <th><div id="image3"><a href="history.html"><img class="page1" src="pics/image3.png" style="height:200px;"></a></div></th>
-                <th><div id="image2"><a href="tourism.html"><img class="page1" src="pics/image2.png" style="height:200px;"></a></div></th>
+                <th><div id="image1"><a href="index.html"><img class="page1" src="images/image1.png" style="height:200px;"></a></div></th>
+                <th><div id="image3"><a href="history.html"><img class="page1" src="images/image3.png" style="height:200px;"></a></div></th>
+                <th><div id="image2"><a href="tourism.html"><img class="page1" src="images/image2.png" style="height:200px;"></a></div></th>
             </tr>
         </div>
         <footer>
