--- a/index.html
+++ b/index.html
@@ -1,27 +1,47 @@
 <!DOCTYPE html>
-
+<!---->
 <html>
-    <head>
+    <head><!--copy paste to each page-->
         <title>The City of Dubai</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="main.css"/>
         <link rel="shortcut icon" href="images/image0.png" />
+        <!-- the abover 2 lines are linking the cascading style sheet and the icon image -->
     </head>
     <body>
+        <!--this is the start of the header-->
         <div class="header" id='home_header' style="text-align: center;">
             <div class="navigation"><p align="right"><a href="index.html"><strong>Home</strong></a> | <a href="history.html">History</a> | <a href="tourism.html">Tourism</a></p></div>
             <div class="title"><h1>Welcome to Dubai</h1></div>
         </div>
-        <div class="pics">
-            <tr>
+        <!--this is the end of the header-->
+        <!--next div is pictures-->
+        <div class="pics"><!-- 3 pictures centered, left and right aligned-->
+            <tr><!-- and anchor element was added to make the pictures clickable-->
                 <th><div id="image1"><a href="index.html"><img class="page1" src="images/image1.png" style="height:200px;"></a></div></th>
                 <th><div id="image3"><a href="history.html"><img class="page1" src="images/image3.png" style="height:200px;"></a></div></th>
                 <th><div id="image2"><a href="tourism.html"><img class="page1" src="images/image2.png" style="height:200px;"></a></div></th>
             </tr>
-        </div>
-        <footer>
-            <div id="footer">&copy QuadriCo. 2019</div>
-        </footer>
-    </body>
-</html>
+        </div><!--end of pictures-->
+        <!--next div is a nested div for content for each picture above (as a summary)-->
+        <div class="content">
+            <div id="left-column">
+                <div class="subtitle">Introduction to Dubai</div>
+                <div class="paragraph">
+                    hello ther daio;j dao ijd oijs of ijo;isjf;osiejf;eoif  af;oij seo ;fi jd a f;o eij s;ofeiej  af;oik ejf;;oja;i djwa;i a;oiwdjwa;oijd a;oiwjdao;iwjd ;ioajwd;oiwj a;oiwjd;oaij
+                </div>
+            </div>
+            <div id="right-column">
+                <div class="subtitle-right">The Industry</div>
+                <div class="paragraph">
+                    hello here too
+                </div>
+            </div>
+        </div><!--end of content-->
+                        <!--start of footer-->
+                        <footer><!--copy paste to each page-->
+                            <div id="footer">&copy OwaisQuadri 2019</div>
+                        </footer>
+                        </body>
+                        </html>
