--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div id="left-column">
                 <div class="subtitle">Introduction to Dubai</div>
                 <div class="paragraph">
-                    hello ther daio;j dao ijd oijs of ijo;isjf;osiejf;eoif  af;oij seo ;fi jd a f;o eij s;ofeiej  af;oik ejf;;oja;i djwa;i a;oiwdjwa;oijd a;oiwjdao;iwjd ;ioajwd;oiwj a;oiwjd;oaij
+                    heyyo
                 </div>
             </div>
             <div id="right-column">
