--- a/index.html
+++ b/index.html
@@ -27,21 +27,25 @@
         <!--next div is a nested div for content for each picture above (as a summary)-->
         <div class="content">
             <div id="left-column">
-                <div class="subtitle">Introduction to Dubai</div>
+                <div class="subtitle-left"><h2 id="subtitle">Introduction to Dubai</h2></div>
                 <div class="paragraph">
-                    heyyo
+                    <p>
+                        hey, how are you doing :) 
+                    </p>
                 </div>
             </div>
             <div id="right-column">
-                <div class="subtitle-right">The Industry</div>
+                <div class="subtitle-right"><h2 id="subtitle">The Industry</h2></div>
                 <div class="paragraph">
-                    hello here too
+                    <p>
+                        hello here too
+                    </p>
                 </div>
             </div>
         </div><!--end of content-->
-                        <!--start of footer-->
-                        <footer><!--copy paste to each page-->
-                            <div id="footer">&copy OwaisQuadri 2019</div>
-                        </footer>
-                        </body>
-                        </html>
+        <!--start of footer-->
+        <footer><!--copy paste to each page-->
+            <div id="footer">&copy OwaisQuadri 2019</div>
+        </footer>
+    </body>
+</html>
