--- a/history.html
+++ b/history.html
@@ -2,19 +2,42 @@
 
 <html>
     <head>
-        <title>The City of Dubai</title>
+        <title>The City of Dubai  -  History</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="main.css"/>
         <link rel="shortcut icon" href="images/image0.png" />
     </head>
     <body id="history">
-        <div class='header' id="history_header" style="text-align: center;">
+        <div class='header' id="history_header" style="text-align: center;"><!--header-->
             <div class="navigation"><p align="right"><a href="index.html">Home</a> | <a href="history.html"><b>History</b></a> | <a href="tourism.html">Tourism</a></p></div>
             <div class="title"><h1>Welcome to Dubai</h1></div>
+        </div><!--end of header-->
+        <!--start of content-->
+        <div class="content" style="margin-top:100px"><!--nested div-->
+            <div class="left-column" style="width:40%;margin-right:0px"><!--left column-->
+                <div><h2 class="subtitle">Old Dubai</h2></div>
+                <div class="paragraph">
+                    <p>
+                        yerr
+                    </p>
+                </div>
+                <div><h2 class="subtitle">New Dubai</h2></div>
+                <div class="paragraph">
+                    <p>
+                        yerr
+                    </p>
+                </div>
+            </div>
+            <div class="right-column" style="width:60%;"><!--right cclumn-->
+                <img  alt="newandoldDubai" src="images/image5.png" style="width:100%;"><!--image-->
+            </div>
         </div>
-        <footer>
-            <div id="footer">&copy QuadriCo. 2019</div>
+
+
+        <!--start of footer-->
+        <footer><!--copy paste to each page-->
+            <div id="footer">&copy OwaisQuadri 2019</div>
         </footer>
     </body>
 </html>
