--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!---->
 <html>
     <head><!--copy paste to each page-->
-        <title>The City of Dubai</title>
+        <title>The City of Dubai  -  Home</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="main.css"/>
@@ -12,40 +12,40 @@
     <body>
         <!--this is the start of the header-->
         <div class="header" id='home_header' style="text-align: center;">
-            <div class="navigation"><p align="right"><a href="index.html"><strong>Home</strong></a> | <a href="history.html">History</a> | <a href="tourism.html">Tourism</a></p></div>
-            <div class="title"><h1>Welcome to Dubai</h1></div>
-        </div>
-        <!--this is the end of the header-->
-        <!--next div is pictures-->
-        <div class="pics"><!-- 3 pictures centered, left and right aligned-->
-            <tr><!-- and anchor element was added to make the pictures clickable-->
-                <th><div id="image1"><a href="index.html"><img class="page1" src="images/image1.png" style="height:200px;"></a></div></th>
-                <th><div id="image3"><a href="history.html"><img class="page1" src="images/image3.png" style="height:200px;"></a></div></th>
-                <th><div id="image2"><a href="tourism.html"><img class="page1" src="images/image2.png" style="height:200px;"></a></div></th>
-            </tr>
-        </div><!--end of pictures-->
-        <!--next div is a nested div for content for each picture above (as a summary)-->
-        <div class="content">
-            <div id="left-column">
-                <div class="subtitle-left"><h2 id="subtitle">Introduction to Dubai</h2></div>
-                <div class="paragraph">
-                    <p>
-                        hey, how are you doing :) 
-                    </p>
-                </div>
-            </div>
-            <div id="right-column">
-                <div class="subtitle-right"><h2 id="subtitle">The Industry</h2></div>
-                <div class="paragraph">
-                    <p>
-                        hello here too
-                    </p>
-                </div>
-            </div>
-        </div><!--end of content-->
-        <!--start of footer-->
-        <footer><!--copy paste to each page-->
-            <div id="footer">&copy OwaisQuadri 2019</div>
-        </footer>
-    </body>
-</html>
+            <div class="navigation"><p align="right"><a href="index.html"><strong>Home</strong></a> | <a href="history.html">History</a> | <a href=<a href="history.html"><a href="tourism.html">Tourism</a></p></div>
+                            <div class="title"><h1>Welcome to Dubai</h1></div>
+                            </div>
+                            <!--this is the end of the header-->
+                            <!--next div is pictures-->
+                            <div class="pics"><!-- 3 pictures centered, left and right aligned-->
+                                <tr><!-- and anchor element was added to make the pictures clickable-->
+                                    <th><div id="image1"><a href="index.html"><img src="images/image1.png" alt="Burj Khalifa" style="height:200px;"></a></div></th>
+                                    <th><div id="image3"><a href="history.html"><img src="images/image3.png"  alt="History" style="height:200px;"></a></div></th>
+                                    <th><div id="image2"><a href="tourism.html"><img src="images/image2.png" alt="Dubai Frame" style="height:200px;"></a></div></th>
+                                </tr>
+                            </div><!--end of pictures-->
+                            <!--next div is a nested div for content for each picture above (as a summary)-->
+                            <div class="content">
+                                <div class="left-column">
+                                    <div class="subtitle-left"><h2 id="subtitle">Introduction to Dubai</h2></div>
+                                    <div class="paragraph">
+                                        <p>
+                                            hey, how are you doing :) 
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="right-column">
+                                    <div class="subtitle-right"><h2 id="subtitle">The Industry</h2></div>
+                                    <div class="paragraph">
+                                        <p>
+                                            hello here too
+                                        </p>
+                                    </div>
+                                </div>
+                            </div><!--end of content-->
+                            <!--start of footer-->
+                            <footer><!--copy paste to each page-->
+                                <div id="footer">&copy OwaisQuadri 2019</div>
+                            </footer>
+                            </body>
+                            </html>
