--- a/tourism.html
+++ b/tourism.html
@@ -2,19 +2,44 @@
 
 <html>
     <head>
-        <title>The City of Dubai</title>
+        <title>The City of Dubai  -  Tourism</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="main.css"/>
         <link rel="shortcut icon" href="images/image0.png" />
     </head>
-    <body id="tourism">
+    <body id="tourism"><!--header-->
         <div class='header' id="tourism_header" style="text-align: center;">
             <div class="navigation"><p align="right"><a href="index.html">Home</a> | <a href="history.html">History</a> | <a href="tourism.html"><b>Tourism</b></a></p></div>
             <div class="title"><h1>Welcome to Dubai</h1></div>
+        </div><!--end of header-->
+        <!-- start of content-->
+        <div class="content" style="margin-top:100px"><!-- white background-->
+            <div class="right-column" style="width:100%"><!--first row with picture then paragraph-->
+                <div class="left-column" style="width:43%;text-align:left ;margin-right:3%;overflow:hidden">
+                    <img id="burjk" src="images/image6.png" alt="burj_khalifa"/></div>
+                <div class="right-column" style="width:54%" >
+                    <div class="subtitle-right">PLACE TITLE HERE</div>
+                    <div class="paragraph"><p>PLACE PARAGRAPH HERE PLACE PARAGRAPH HERE PLACE PARAGRAPH HEREPLACE PARAGRAPH HERE PLACE PARAGRAPH HERE PLACE PARAGRAPH HERE PLACE PARAGRAPH HERE PLACE PARAGRAPH HERE PLACE PARAGRAPH HERE PLACE PARAGRAPH HERE PLACE PARAGRAPH HER LACE PARAGRAPH HERE</p></div>
+                </div>
+            </div><!--three column thing-->
+            <div><!--second row with text pic then text again-->
+                <div class="oneofthree">
+                    <div class="subtitle-left">PLACE TITLE HERE</div>
+                    <div class="paragraph"><p>PLACE PARAGRAPH HERE</p></div>
+                </div>
+                <!--make another middle, left, right class-->
+                <div class="twoofthree"><img id="dframe" src="images/image7.png" alt="dubai_frame" /></div>
+                <div class="threeofthree">
+                    <div class="subtitle-left">PLACE TITLE HERE</div>
+                    <div class="paragraph"><p>PLACE PARAGRAPH HERE</p></div>
+                </div>
+            </div>
         </div>
-        <footer>
-            <div id="footer">&copy QuadriCo. 2019</div>
+        
+        <!--start of footer-->
+        <footer><!--copy paste to each page-->
+            <div>&copy OwaisQuadri 2019</div>
         </footer>
     </body>
 </html>
