--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!---->
+<!--PAGE 1-->
 <html>
     <head><!--copy paste to each page-->
         <title>The City of Dubai  -  Home</title>
@@ -7,14 +7,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="main.css"/>
         <link rel="shortcut icon" href="images/image0.png" />
+        <style>
+            p,ol,ul,li{color:#29A5CE}
+        </style>
         <!-- the abover 2 lines are linking the cascading style sheet and the icon image -->
     </head>
     <body>
         <!--this is the start of the header-->
         <div class="header" id='home_header' style="text-align: center;">
-            <div class="navigation"><p align="right"><a href="index.html"><strong>Home</strong></a> | <a href="history.html">History</a> | <a href=<a href="history.html"><a href="tourism.html">Tourism</a></p></div>
-                            <div class="title"><h1>Welcome to Dubai</h1></div>
-                            </div>
+            <div class="navigation">
+                <p align="right">
+                    <a href="index.html"><strong>Home</strong></a> |
+                    <a href="history.html">History</a> |
+                    <a href="tourism.html">Tourism</a>
+                </p>
+            </div>
+            <div class="title"><h1>Welcome to Dubai</h1></div>
+        </div>
                             <!--this is the end of the header-->
                             <!--next div is pictures-->
                             <div class="pics"><!-- 3 pictures centered, left and right aligned-->
@@ -25,21 +34,41 @@
                                 </tr>
                             </div><!--end of pictures-->
                             <!--next div is a nested div for content for each picture above (as a summary)-->
-                            <div class="content">
+                            <div class="content" >
                                 <div class="left-column">
-                                    <div class="subtitle-left"><h2 id="subtitle">Introduction to Dubai</h2></div>
-                                    <div class="paragraph">
-                                        <p>
-                                            hey, how are you doing :) 
-                                        </p>
+                                    <div class="subtitle-left" id="center_subtitle"><h2 class="subtitle">Introduction to Dubai</h2></div>
+                                    <div class="paragraph" style="padding-right:10%">
+                                        <p >
+                                          Dubai is the capital city of the United Arab Emerates.
+                                          it is also the biggest and most populated city with around 3.14 million people
+                                          inhabiting the city. Apart from the people that live there, in 2018 a total of 
+                                          15.8 million people visited Dubai. making it the 6th most visited city in the
+                                          world in 2018. which amounted for $31.3 Billion USD. Tourism is one of the
+                                          biggest factors behind the economy and how people make a living in dubai. The 
+                                          history of dubai is also very facsinating. going from a city with a rich heritage
+                                          to a tourism capital of the world was a
+                                          process that was extensively planned and so far, things are exceeding their 
+                                          expectations.  
+                                        </p><!--INTRO PARAGRAPH-->
                                     </div>
                                 </div>
                                 <div class="right-column">
-                                    <div class="subtitle-right"><h2 id="subtitle">The Industry</h2></div>
+                                    <div class="subtitle-right" id="center_subtitle"><h2 class="subtitle">The Industry</h2></div>
                                     <div class="paragraph">
                                         <p>
-                                            hello here too
-                                        </p>
+                                            As you might expect, Dubai is very invested in its tourism and hospitality.
+                                            But Dubai is very versatile and has many other types of industry and many are
+                                            more vital than its tourism reputation.
+                                            The top 5 industries in Dubai are:
+                                        <ol>
+                                            <li>Construction</li>
+                                            <li>Oil and Gas</li>
+                                            <li>Foods and snacks</li>
+                                            <li>Tourism</li>
+                                            <li>Energy</li>
+                                            
+                                        </ol>
+                                        </p><!-- PARAGRAPH ABOUT HOW DUBAI IS RICH-->
                                     </div>
                                 </div>
                             </div><!--end of content-->
