--- a/index.html
+++ b/index.html
@@ -1,80 +1,37 @@
 <!DOCTYPE html>
-<!--PAGE 1-->
 <html>
-    <head><!--copy paste to each page-->
-        <title>The City of Dubai  -  Home</title>
+    <head>
+        <title>OwaisQuadri - Software Engineer</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="main.css"/>
         <link rel="shortcut icon" href="images/image0.png" />
-        <style>
-            p,ol,ul,li{color:#29A5CE}
-        </style>
-        <!-- the abover 2 lines are linking the cascading style sheet and the icon image -->
     </head>
     <body>
-        <!--this is the start of the header-->
-        <div class="header" id='home_header' style="text-align: center;">
+        <div class="header">
             <div class="navigation">
                 <p align="right">
                     <a href="index.html"><strong>Home</strong></a> |
-                    <a href="history.html">History</a> |
-                    <a href="tourism.html">Tourism</a>
+                    <a href="projects.html">Projects</a> |
+                    <a href="contact.html">Contact</a>
                 </p>
             </div>
-            <div class="title"><h1>Welcome to Dubai</h1></div>
+            <div class="title">
+                <h1>Welcome</h1>
+            </div>
         </div>
-                            <!--this is the end of the header-->
-                            <!--next div is pictures-->
-                            <div class="pics"><!-- 3 pictures centered, left and right aligned-->
-                                <tr><!-- and anchor element was added to make the pictures clickable-->
-                                    <th><div id="image1"><a href="index.html"><img src="images/image1.png" alt="Burj Khalifa" style="height:200px;"></a></div></th>
-                                    <th><div id="image3"><a href="history.html"><img src="images/image3.png"  alt="History" style="height:200px;"></a></div></th>
-                                    <th><div id="image2"><a href="tourism.html"><img src="images/image2.png" alt="Dubai Frame" style="height:200px;"></a></div></th>
-                                </tr>
-                            </div><!--end of pictures-->
-                            <!--next div is a nested div for content for each picture above (as a summary)-->
-                            <div class="content" >
-                                <div class="left-column">
-                                    <div class="subtitle-left" id="center_subtitle"><h2 class="subtitle">Introduction to Dubai</h2></div>
-                                    <div class="paragraph" style="padding-right:10%">
-                                        <p >
-                                          Dubai is the capital city of the United Arab Emerates.
-                                          it is also the biggest and most populated city with around 3.14 million people
-                                          inhabiting the city. Apart from the people that live there, in 2018 a total of 
-                                          15.8 million people visited Dubai. making it the 6th most visited city in the
-                                          world in 2018. which amounted for $31.3 Billion USD. Tourism is one of the
-                                          biggest factors behind the economy and how people make a living in dubai. The 
-                                          history of dubai is also very facsinating. going from a city with a rich heritage
-                                          to a tourism capital of the world was a
-                                          process that was extensively planned and so far, things are exceeding their 
-                                          expectations.  
-                                        </p><!--INTRO PARAGRAPH-->
-                                    </div>
-                                </div>
-                                <div class="right-column">
-                                    <div class="subtitle-right" id="center_subtitle"><h2 class="subtitle">The Industry</h2></div>
-                                    <div class="paragraph">
-                                        <p>
-                                            As you might expect, Dubai is very invested in its tourism and hospitality.
-                                            But Dubai is very versatile and has many other types of industry and many are
-                                            more vital than its tourism reputation.
-                                            The top 5 industries in Dubai are:
-                                        <ol>
-                                            <li>Construction</li>
-                                            <li>Oil and Gas</li>
-                                            <li>Foods and snacks</li>
-                                            <li>Tourism</li>
-                                            <li>Energy</li>
-                                            
-                                        </ol>
-                                        </p><!-- PARAGRAPH ABOUT HOW DUBAI IS RICH-->
-                                    </div>
-                                </div>
-                            </div><!--end of content-->
-                            <!--start of footer-->
-                            <footer><!--copy paste to each page-->
-                                <div id="footer">&copy OwaisQuadri 2019</div>
-                            </footer>
-                            </body>
-                            </html>
+
+        <div class="content">
+            <div class="intro">
+                <h2>Owais</h2>
+                <p>
+                    Innovative Software Engineer driving impactful app solutions.
+                </p>
+            </div>
+        </div>
+
+        <footer>
+            <div id="footer">&copy; OQ 2024</div>
+        </footer>
+    </body>
+</html>
