--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
             <div class="navigation">
                 <p align="right">
                     <a href="index.html"><strong>Home</strong></a> |
-                    <a href="projects.html">Projects</a> |
-                    <a href="contact.html">Contact</a>
+                    <a href="https://github.com/OwaisQuadri" target="_blank">Projects</a> |
+                    <a href="https://apps.apple.com/us/developer/owais-quadri/id1697630981" target="_blank">Apps</a> |
+                    <a href="https://www.linkedin.com/in/owaisquadri/" target="_blank">Contact</a>
                 </p>
             </div>
             <div class="title">
-                <h1>Welcome</h1>
+                <h1>Owais Quadri</h1>
             </div>
         </div>
 
         <div class="content">
             <div class="intro">
-                <h2>Owais</h2>
                 <p>
                     Innovative Software Engineer driving impactful app solutions.
                 </p>
